--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="calc-body"> <!--фон калькулятора-->
+            <input class="dark" type = button value = "тёмная тема">
             <input class="number-1" type="number">
             <select id="select">
                 <option>+</option>
@@ -21,7 +22,8 @@
             <div class="equal">
                 <button id="equalsign" class="equalsign">=</button>
             </div>
-            <output class="result"></output>         
+            <output class="result"></output> 
+                   
     </div>
     <script src="main.js"></script>
 </body>
