--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             <output class="result"></output> 
                    
     </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
